tests/snapshots/snapshot_tests__nested_namespaces_ir.snap
---
source: tests/snapshot_tests.rs
expression: ir_context
---
SchemaContext {
    files: [
        FileDef {
            path: "nested_namespaces.poly",
            namespaces: [
                NamespaceDef {
                    name: "game",
                    datasource: None,
                    items: [
                        Namespace(
                            NamespaceDef {
                                name: "game.character",
                                datasource: None,
                                items: [
                                    Struct(
                                        StructDef {
                                            name: "Player",
                                            fqn: "game.character.Player",
                                            is_embed: false,
                                            datasource: None,
                                            cache_strategy: None,
                                            load: None,
                                            is_readonly: false,
                                            soft_delete_field: None,
                                            pack_separator: None,
                                            header: [],
                                            items: [
                                                Field(
                                                    FieldDef {
                                                        name: "id",
                                                        field_type: TypeRef {
                                                            original: "u32",
                                                            fqn: "u32",
                                                            namespace_fqn: "",
                                                            type_name: "u32",
                                                            parent_type_path: "",
                                                            lang_type: "u32",
                                                            is_primitive: true,
                                                            is_struct: false,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: false,
                                                            inner_type: None,
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                        max_length: None,
                                                        default_value: None,
                                                        range: None,
                                                        regex_pattern: None,
                                                        auto_create: None,
                                                        auto_update: None,
                                                        search_index: None,
                                                    },
                                                ),
                                                Field(
                                                    FieldDef {
                                                        name: "name",
                                                        field_type: TypeRef {
                                                            original: "string",
                                                            fqn: "string",
                                                            namespace_fqn: "",
                                                            type_name: "string",
                                                            parent_type_path: "",
                                                            lang_type: "string",
                                                            is_primitive: true,
                                                            is_struct: false,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: false,
                                                            inner_type: None,
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                        max_length: None,
                                                        default_value: None,
                                                        range: None,
                                                        regex_pattern: None,
                                                        auto_create: None,
                                                        auto_update: None,
                                                        search_index: None,
                                                    },
                                                ),
                                            ],
                                            indexes: [],
                                            refs: [],
                                            relations: [],
                                        },
                                    ),
                                ],
                            },
                        ),
                        Namespace(
                            NamespaceDef {
                                name: "game.item",
                                datasource: None,
                                items: [
                                    Struct(
                                        StructDef {
                                            name: "Item",
                                            fqn: "game.item.Item",
                                            is_embed: false,
                                            datasource: None,
                                            cache_strategy: None,
                                            load: None,
                                            is_readonly: false,
                                            soft_delete_field: None,
                                            pack_separator: None,
                                            header: [],
                                            items: [
                                                Field(
                                                    FieldDef {
                                                        name: "id",
                                                        field_type: TypeRef {
                                                            original: "u32",
                                                            fqn: "u32",
                                                            namespace_fqn: "",
                                                            type_name: "u32",
                                                            parent_type_path: "",
                                                            lang_type: "u32",
                                                            is_primitive: true,
                                                            is_struct: false,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: false,
                                                            inner_type: None,
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                        max_length: None,
                                                        default_value: None,
                                                        range: None,
                                                        regex_pattern: None,
                                                        auto_create: None,
                                                        auto_update: None,
                                                        search_index: None,
                                                    },
                                                ),
                                                Field(
                                                    FieldDef {
                                                        name: "name",
                                                        field_type: TypeRef {
                                                            original: "string",
                                                            fqn: "string",
                                                            namespace_fqn: "",
                                                            type_name: "string",
                                                            parent_type_path: "",
                                                            lang_type: "string",
                                                            is_primitive: true,
                                                            is_struct: false,
                                                            is_enum: false,
                                                            is_option: false,
                                                            is_list: false,
                                                            inner_type: None,
                                                        },
                                                        attributes: [],
                                                        is_primary_key: false,
                                                        is_unique: false,
                                                        is_index: false,
                                                        foreign_key: None,
                                                        max_length: None,
                                                        default_value: None,
                                                        range: None,
                                                        regex_pattern: None,
                                                        auto_create: None,
                                                        auto_update: None,
                                                        search_index: None,
                                                    },
                                                ),
                                            ],
                                            indexes: [],
                                            refs: [],
                                            relations: [],
                                        },
                                    ),
                                ],
                            },
                        ),
                    ],
                },
            ],
            renames: [],
        },
    ],
}
